fdo#66216 fix DBTypeConversion::toTimeString format

std::ostringstream::width is not sticky

Change-Id: I32d77bec68506b7691a4f86dadb24e62fdc13d42